fix: 修复remove空对象后值为null的异常

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "jest"
   },
   "keywords": [
     "immutable.js",
