--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "immutablepatch",
-  "version": "0.5.0",
+  "name": "immutablepatch2",
+  "version": "0.5.1",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -32,5 +32,8 @@
   },
   "peerDependencies": {
     "immutable": "*"
+  },
+  "dependencies": {
+    "jest": "^26.1.0"
   }
 }
