--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "http://github.com/intelie/immutable-js-patch.git"
+    "url": "https://github.com/1615450788/immutable-js-patch"
   },
   "devDependencies": {
     "gulp": "^3.8.9",
