--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "immutablepatch2",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -28,12 +28,12 @@
     "gulp-mocha": "^1.1.1",
     "gulp-util": "^3.0.1",
     "immutablediff": "^0.3.2",
-    "jscheck": "^0.2.0"
+    "jscheck": "^0.2.0",
+    "jest": "^26.1.0"
   },
   "peerDependencies": {
     "immutable": "*"
   },
   "dependencies": {
-    "jest": "^26.1.0"
   }
 }
